# cimgraph-demo

./: .gitignore  01_profiles_example.ipynb  02_custom_profiles.ipynb  03_creating_objects.ipynb  04_build_network_demo.ipynb  CIMTOOL_CODESPACE_POC.md  IEEE13Demo.xml  IEEE13Demo.xmlredirect  LICENSE  README.md  build_network_demo.ipynb  cim_converter.dss  demo_feeder.xml  hand_built_model.xml  launch.sh  model_creator_demo.ipynb  model_dss_builder.ipynb  model_parser_demo.ipynb  new_model.mxl  opendsscmd.ini  pyproject.toml  understanding_uml.ipynb
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.devcontainer/Blazegraph/: devcontainer.json
.devcontainer/CIM-Graph-Demo/: devcontainer.json
cimgraph_demo/custom_profiles/CoreEquipment/: CoreEquipment.py  __init__.py
dss/: IEEE13Node.dss  ieee13demo.xml  ieee13demo1.xml  ieee13mod_busxy.dss  ieee13mod_busxy_flipped.dss  opendsscmd.ini
scripts/: launch-cimtool.sh  launch-glimpse.sh  setup.sh
