[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cimgraph-demo"
version = "0.1.0"
description = "CIMantic Graphs demo notebooks and utilities"
requires-python = ">=3.10,<3.15"
dependencies = [
    "cim-graph>=0.5.0a2",
    "cimhub-core",
    "cimhub-opendss",
    "cimhub-repair",
    "ipykernel>=6.0",
    "notebook>=7.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cimgraph_demo"]

[tool.uv.sources]
cimhub-core = { path = "../CIMHub_2_0/cimhub_core", editable = true }
cimhub-repair = { path = "../CIMHub_2_0/cimhub_repair", editable = true }
cimhub-opendss = { path = "../CIMHub_2_0/cimhub_opendss", editable = true }
