[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cimgraph-demo"
version = "0.1.0"
description = "CIMantic Graphs demo notebooks and utilities"
requires-python = ">=3.10,<3.15"
# The codespace demo runs cimgraph against CIM XML files directly (no database).
# The cimhub-* packages (OpenDSS export) are intentionally omitted here: they are
# not published to PyPI and were previously sourced from a local sibling checkout
# that does not exist in a codespace. See README for enabling OpenDSS export.
dependencies = [
    "cim-graph>=0.5.0a2",
    "ipykernel>=6.0",
    "notebook>=7.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cimgraph_demo"]
